Admin Panel Change Password and Number Animation

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -47,15 +47,6 @@
       <!-- /.search form -->
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
-          <li class="header">Main Navigation</li>
-          <li class="active treeview">
-              <a [routerLink]="['home']">
-                  <i class="fa fa-dashboard"></i>
-                  <span>Dashboard</span>
-
-              </a>
-
-          </li>
           <li class="header">Master</li>
           <li class="treeview">
               <a href="#">
@@ -311,7 +302,7 @@
               </a>
               <ul class="treeview-menu">
 
-                  <li><a [routerLink]="['/changepassword']"><i class="fa fa-circle-o"></i>Change Password</a></li>
+                  <!-- <li><a [routerLink]="['/changepassword']"><i class="fa fa-circle-o"></i>Change Password</a></li> -->
                   <li><a (click)="Logout()" style="cursor:pointer;"><i class="fa fa-circle-o"></i>Logout</a></li>
 
               </ul>
