--- a/src/app/components/player/player.view.html
+++ b/src/app/components/player/player.view.html
@@ -81,9 +81,9 @@
         </div>
     </section>
 </div>
-<button mat-mini-fab class="example-tooltip-host pull-right fixedbutton" matTooltip="Add New Record" [matTooltipPosition]="position" [routerLink]="['/destination']">
+<!-- <button mat-mini-fab class="example-tooltip-host pull-right fixedbutton" matTooltip="Add New Record" [matTooltipPosition]="position" [routerLink]="['/destination']">
     <mat-icon aria-label="edit">add circle</mat-icon>
-</button>
+</button> -->
 <div class="my-container">
     <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
 </div>
